--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,21 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Kadi App",
+  "name": "Kadi Undo",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "icon.png",
+      "sizes": "128x128",
+      "type": "image/png"
+    },
+    {
+      "src": "donut.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "splash.png",
+      "sizes": "1242x512",
+      "type": "image/png"
     }
   ],
   "start_url": ".",
