--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,6 +11,11 @@
       "src": "donut.png",
       "sizes": "512x512",
       "type": "image/png"
+    },
+    {
+      "src": "donut-large.png",
+      "sizes": "1024x1024",
+      "type": "image/png"
     }
   ],
   "start_url": ".",
